--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
       <script src="p5.play.js"></script>
 
+
       
       <!--Your web app's Firebase configuration
          Add here
@@ -35,6 +36,7 @@
       <link rel="stylesheet" type="text/css" href="style.css"/>
     </head>
     <body>
+      <script src="js/food.js"></script>
       <script src="sketch.js"></script>
     </body>
   </html>
